--- a/css/game.css
+++ b/css/game.css
@@ -184,10 +184,9 @@ h1 {
     margin-bottom: 40px;
 }
 .game-section img {
-    width: 100%;
-
-
+    width: 70%;
     height: 500px;
+    text-align: center;
     display: block;
     margin: 0 auto;
 }
