--- a/css/nizi.css
+++ b/css/nizi.css
@@ -165,3 +165,37 @@ body {
 
 /*各ページで変更
 にじさんじ*/
+
+body {
+    font-family: Arial, sans-serif;
+    line-height: 1.6;
+    margin: 20px;
+}
+h1 {
+    text-align: center;
+}
+.YouTube {
+    margin-bottom: 40px;
+}
+.YouTube img {
+    width: 80%;
+    height: 600px;
+    text-align: center;
+    display: block;
+    margin: 0 auto;
+}
+.YouTube h2 {
+    color: #333;
+    font-size: 50px;
+    margin-top: 20px;
+}
+.YouTube p {
+    font-size: 20px;
+}
+
+
+.YouTube-douga {
+    display: grid;
+    grid-gap: 20px;
+    margin-top: 20px;
+}
