--- a/css/game.css
+++ b/css/game.css
@@ -203,7 +203,13 @@ h1 {
 .game-kousiki {
     display: grid;
 
-
     grid-gap: 20px;
     margin-top: 20px;
+}
+
+/* 小画面（スマートフォン）用スタイル */
+@media (max-width: 767px) {
+    .image-container img {
+        max-width: 200px; /* スマホ用の最大幅 */
+    }
 }
