--- a/css/about.css
+++ b/css/about.css
@@ -159,15 +159,8 @@ body {
 }
 
 
-
-
-
-
 /*各ページで変更
 自己紹介*/
-
-
-
 
 /*自己紹介用*/
 .about {
@@ -175,8 +168,19 @@ body {
     grid-template-columns: repeat(2, 1fr);/*1列2つ並ぶ*/
     text-align: center;/*ど真ん中*/
     align-items: center;
-    height: 70vh;
+    height: 70%;
     width: 70%;
     background-color:#ceeef3;/*背景の色*/
     margin: 0 auto;
+}
+
+.about h3 {
+    text-align: center;
+    font-size: 20;
+}
+
+.about p {
+    text-align: center;
+    font-size: 20
+    ;
 }
