--- a/css/game.css
+++ b/css/game.css
@@ -159,14 +159,8 @@ body {
 }
 
 
-
-
-
-
 /*各ページで変更
 ゲーム*/
-
-
 
 
 /*gameについて*/
@@ -177,33 +171,34 @@ body {
     line-height: 1.6;
     margin: 20px;
 }
+
 h1 {
     text-align: center;
 }
+
 .game-section {
     margin-bottom: 40px;
 }
+
 .game-section img {
     width: 70%;
     height: 500px;
+
     text-align: center;
     display: block;
     margin: 0 auto;
-}
 
 
-/* 小画面（スマートフォン）用スタイル */
-@media (max-width: 767px) {
-    .game-section img {
-        max-width: 100%; /* スマホ用の最大幅 */
-    }
 }
+
 
 .game-section h2 {
     color: #333;
     font-size: 50px;
     margin-top: 20px;
 }
+
+
 .game-section p {
     font-size: 25px;
 }
@@ -211,8 +206,23 @@ h1 {
 
 .game-kousiki {
     display: grid;
-
     grid-gap: 20px;
     margin-top: 20px;
 }
 
+
+
+img.miniimage { display: none; }   /* ※1 */
+
+/* ▼表示領域が600px以上の場合 */
+@media (min-width: 600px) {
+   img.miniimage { display: none; }  /* miniを非表示 */
+   img.bigimage  { display: block; } /* bigを表示 */
+}
+/* ▼表示領域が600px未満の場合 */
+@media (max-width: 599px) {
+   img.miniimage { display: block; } /* miniを表示 */
+   img.bigimage  { display: none; }  /* bigを非表示 */
+}
+
+.resizeimage img { width: 100%; }
